--- a/waec-neco-frontend/.env
+++ b/waec-neco-frontend/.env
@@ -1,1 +1,10 @@
 VITE_API_BASE=https://waec-neco-backend.vercel.app
+
+
+VITE_FIREBASE_API_KEY=AIzaSyBV-Cc6eLm6vKcehuLM4NhWRTmUFhmUz1g
+VITE_FIREBASE_AUTH_DOMAIN=exam-sharp-school.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=exam-sharp-school
+VITE_FIREBASE_STORAGE_BUCKET=exam-sharp-school.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=820042751352
+VITE_FIREBASE_APP_ID=1:820042751352:web:07f97c4199a5f6225f7c8d
+VITE_FIREBASE_MEASUREMENT_ID=G-VHL3QLDM0F
